--- a/report/index.html
+++ b/report/index.html
@@ -31,27 +31,27 @@
             <td class="headerValue">lcov.info</td>
             <td></td>
             <td class="headerItem">Lines:</td>
-            <td class="headerCovTableEntry">267</td>
-            <td class="headerCovTableEntry">424</td>
-            <td class="headerCovTableEntryLo">63.0 %</td>
+            <td class="headerCovTableEntry">308</td>
+            <td class="headerCovTableEntry">461</td>
+            <td class="headerCovTableEntryLo">66.8 %</td>
           </tr>
           <tr>
             <td class="headerItem">Date:</td>
-            <td class="headerValue">2022-11-15 17:07:48</td>
+            <td class="headerValue">2022-11-23 14:12:34</td>
             <td></td>
             <td class="headerItem">Functions:</td>
-            <td class="headerCovTableEntry">69</td>
-            <td class="headerCovTableEntry">100</td>
-            <td class="headerCovTableEntryLo">69.0 %</td>
+            <td class="headerCovTableEntry">80</td>
+            <td class="headerCovTableEntry">112</td>
+            <td class="headerCovTableEntryLo">71.4 %</td>
           </tr>
           <tr>
             <td></td>
             <td></td>
             <td></td>
             <td class="headerItem">Branches:</td>
-            <td class="headerCovTableEntry">101</td>
-            <td class="headerCovTableEntry">166</td>
-            <td class="headerCovTableEntryLo">60.8 %</td>
+            <td class="headerCovTableEntry">119</td>
+            <td class="headerCovTableEntry">192</td>
+            <td class="headerCovTableEntryLo">62.0 %</td>
           </tr>
           <tr><td><img src="glass.png" width=3 height=3 alt=""></td></tr>
         </table>
@@ -84,29 +84,53 @@
     <tr>
       <td class="coverFile"><a href="contracts/index.html">contracts</a></td>
       <td class="coverBar" align="center">
-        <table border=0 cellspacing=0 cellpadding=1><tr><td class="coverBarOutline"><img src="emerald.png" width=94 height=10 alt="94.2%"><img src="snow.png" width=6 height=10 alt="94.2%"></td></tr></table>
+                <table border=0 cellspacing=0 cellpadding=1><tr><td class="coverBarOutline"><img src="snow.png" width=100 height=10 alt="0.0%"></td></tr></table>
       </td>
-      <td class="coverPerHi">94.2&nbsp;%</td>
-      <td class="coverNumHi">178 / 189</td>
-      <td class="coverPerHi">93.5&nbsp;%</td>
-      <td class="coverNumHi">43 / 46</td>
-      <td class="coverPerMed">87.5&nbsp;%</td>
-      <td class="coverNumMed">70 / 80</td>
+      <td class="coverPerLo">0.0&nbsp;%</td>
+      <td class="coverNumLo">0 / 11</td>
+      <td class="coverPerLo">0.0&nbsp;%</td>
+      <td class="coverNumLo">0 / 3</td>
+      <td class="coverPerLo">0.0&nbsp;%</td>
+      <td class="coverNumLo">0 / 6</td>
     </tr>
     <tr>
-      <td class="coverFile"><a href="contracts/jit-relay/index.html">contracts/jit-relay</a></td>
+      <td class="coverFile"><a href="contracts/auction-handler/index.html">contracts/auction-handler</a></td>
       <td class="coverBar" align="center">
-        <table border=0 cellspacing=0 cellpadding=1><tr><td class="coverBarOutline"><img src="ruby.png" width=59 height=10 alt="59.3%"><img src="snow.png" width=41 height=10 alt="59.3%"></td></tr></table>
+        <table border=0 cellspacing=0 cellpadding=1><tr><td class="coverBarOutline"><img src="amber.png" width=89 height=10 alt="89.0%"><img src="snow.png" width=11 height=10 alt="89.0%"></td></tr></table>
       </td>
-      <td class="coverPerLo">59.3&nbsp;%</td>
-      <td class="coverNumLo">54 / 91</td>
-      <td class="coverPerLo">50.0&nbsp;%</td>
-      <td class="coverNumLo">15 / 30</td>
-      <td class="coverPerLo">47.6&nbsp;%</td>
-      <td class="coverNumLo">20 / 42</td>
+      <td class="coverPerMed">89.0&nbsp;%</td>
+      <td class="coverNumMed">89 / 100</td>
+      <td class="coverPerMed">78.1&nbsp;%</td>
+      <td class="coverNumMed">25 / 32</td>
+      <td class="coverPerMed">77.1&nbsp;%</td>
+      <td class="coverNumMed">37 / 48</td>
     </tr>
     <tr>
-      <td class="coverFile"><a href="contracts/jit-searcher/index.html">contracts/jit-searcher</a></td>
+      <td class="coverFile"><a href="contracts/helpers/index.html">contracts/helpers</a></td>
+      <td class="coverBar" align="center">
+                <table border=0 cellspacing=0 cellpadding=1><tr><td class="coverBarOutline"><img src="snow.png" width=100 height=10 alt="0.0%"></td></tr></table>
+      </td>
+      <td class="coverPerLo">0.0&nbsp;%</td>
+      <td class="coverNumLo">0 / 5</td>
+      <td class="coverPerLo">0.0&nbsp;%</td>
+      <td class="coverNumLo">0 / 1</td>
+      <td class="coverPerLo">0.0&nbsp;%</td>
+      <td class="coverNumLo">0 / 2</td>
+    </tr>
+    <tr>
+      <td class="coverFile"><a href="contracts/legacy/index.html">contracts/legacy</a></td>
+      <td class="coverBar" align="center">
+        <table border=0 cellspacing=0 cellpadding=1><tr><td class="coverBarOutline"><img src="emerald.png" width=100 height=10 alt="100.0%"></td></tr></table>
+      </td>
+      <td class="coverPerHi">100.0&nbsp;%</td>
+      <td class="coverNumHi">178 / 178</td>
+      <td class="coverPerHi">100.0&nbsp;%</td>
+      <td class="coverNumHi">43 / 43</td>
+      <td class="coverPerHi">94.6&nbsp;%</td>
+      <td class="coverNumHi">70 / 74</td>
+    </tr>
+    <tr>
+      <td class="coverFile"><a href="contracts/searcher-direct/index.html">contracts/searcher-direct</a></td>
       <td class="coverBar" align="center">
         <table border=0 cellspacing=0 cellpadding=1><tr><td class="coverBarOutline"><img src="amber.png" width=85 height=10 alt="85.2%"><img src="snow.png" width=15 height=10 alt="85.2%"></td></tr></table>
       </td>
@@ -118,7 +142,19 @@
       <td class="coverNumLo">9 / 24</td>
     </tr>
     <tr>
-      <td class="coverFile"><a href="script/index.html">script</a></td>
+      <td class="coverFile"><a href="contracts/searcher-proxy/index.html">contracts/searcher-proxy</a></td>
+      <td class="coverBar" align="center">
+                <table border=0 cellspacing=0 cellpadding=1><tr><td class="coverBarOutline"><img src="snow.png" width=100 height=10 alt="0.0%"></td></tr></table>
+      </td>
+      <td class="coverPerLo">0.0&nbsp;%</td>
+      <td class="coverNumLo">0 / 23</td>
+      <td class="coverPerLo">0.0&nbsp;%</td>
+      <td class="coverNumLo">0 / 9</td>
+      <td class="coverPerLo">0.0&nbsp;%</td>
+      <td class="coverNumLo">0 / 18</td>
+    </tr>
+    <tr>
+      <td class="coverFile"><a href="script/legacy-script/index.html">script/legacy-script</a></td>
       <td class="coverBar" align="center">
                 <table border=0 cellspacing=0 cellpadding=1><tr><td class="coverBarOutline"><img src="snow.png" width=100 height=10 alt="0.0%"></td></tr></table>
       </td>
@@ -132,14 +168,26 @@
     <tr>
       <td class="coverFile"><a href="test/index.html">test</a></td>
       <td class="coverBar" align="center">
-        <table border=0 cellspacing=0 cellpadding=1><tr><td class="coverBarOutline"><img src="ruby.png" width=26 height=10 alt="26.1%"><img src="snow.png" width=74 height=10 alt="26.1%"></td></tr></table>
+        <table border=0 cellspacing=0 cellpadding=1><tr><td class="coverBarOutline"><img src="emerald.png" width=95 height=10 alt="94.7%"><img src="snow.png" width=5 height=10 alt="94.7%"></td></tr></table>
       </td>
-      <td class="coverPerLo">26.1&nbsp;%</td>
-      <td class="coverNumLo">12 / 46</td>
-      <td class="coverPerLo">40.0&nbsp;%</td>
-      <td class="coverNumLo">4 / 10</td>
-      <td class="coverPerLo">25.0&nbsp;%</td>
-      <td class="coverNumLo">2 / 8</td>
+      <td class="coverPerHi">94.7&nbsp;%</td>
+      <td class="coverNumHi">18 / 19</td>
+      <td class="coverPerLo">71.4&nbsp;%</td>
+      <td class="coverNumLo">5 / 7</td>
+      <td class="coverPerLo">50.0&nbsp;%</td>
+      <td class="coverNumLo">3 / 6</td>
+    </tr>
+    <tr>
+      <td class="coverFile"><a href="test/legacy-test/index.html">test/legacy-test</a></td>
+      <td class="coverBar" align="center">
+                <table border=0 cellspacing=0 cellpadding=1><tr><td class="coverBarOutline"><img src="snow.png" width=100 height=10 alt="0.0%"></td></tr></table>
+      </td>
+      <td class="coverPerLo">0.0&nbsp;%</td>
+      <td class="coverNumLo">0 / 27</td>
+      <td class="coverPerLo">0.0&nbsp;%</td>
+      <td class="coverNumLo">0 / 3</td>
+      <td class="coverPerLo">0.0&nbsp;%</td>
+      <td class="coverNumLo">0 / 2</td>
     </tr>
   </table>
   </center>
