--- a/report/test/index-sort-l.html
+++ b/report/test/index-sort-l.html
@@ -31,27 +31,27 @@
             <td class="headerValue">lcov.info</td>
             <td></td>
             <td class="headerItem">Lines:</td>
-            <td class="headerCovTableEntry">12</td>
-            <td class="headerCovTableEntry">46</td>
-            <td class="headerCovTableEntryLo">26.1 %</td>
+            <td class="headerCovTableEntry">18</td>
+            <td class="headerCovTableEntry">19</td>
+            <td class="headerCovTableEntryHi">94.7 %</td>
           </tr>
           <tr>
             <td class="headerItem">Date:</td>
-            <td class="headerValue">2022-11-15 17:07:48</td>
+            <td class="headerValue">2022-11-23 14:12:34</td>
             <td></td>
             <td class="headerItem">Functions:</td>
-            <td class="headerCovTableEntry">4</td>
-            <td class="headerCovTableEntry">10</td>
-            <td class="headerCovTableEntryLo">40.0 %</td>
+            <td class="headerCovTableEntry">5</td>
+            <td class="headerCovTableEntry">7</td>
+            <td class="headerCovTableEntryLo">71.4 %</td>
           </tr>
           <tr>
             <td></td>
             <td></td>
             <td></td>
             <td class="headerItem">Branches:</td>
-            <td class="headerCovTableEntry">2</td>
-            <td class="headerCovTableEntry">8</td>
-            <td class="headerCovTableEntryLo">25.0 %</td>
+            <td class="headerCovTableEntry">3</td>
+            <td class="headerCovTableEntry">6</td>
+            <td class="headerCovTableEntryLo">50.0 %</td>
           </tr>
           <tr><td><img src="../glass.png" width=3 height=3 alt=""></td></tr>
         </table>
@@ -82,28 +82,16 @@
       <td class="tableHead" colspan=2>Branches <span class="tableHeadSort"><a href="index-sort-b.html"><img src="../updown.png" width=10 height=14 alt="Sort by branch coverage" title="Sort by branch coverage" border=0></a></span></td>
     </tr>
     <tr>
-      <td class="coverFile"><a href="PFLAuction.t.sol.gcov.html">PFLAuction.t.sol</a></td>
+      <td class="coverFile"><a href="PFL_AuctionHandler.t.sol.gcov.html">PFL_AuctionHandler.t.sol</a></td>
       <td class="coverBar" align="center">
-                <table border=0 cellspacing=0 cellpadding=1><tr><td class="coverBarOutline"><img src="../snow.png" width=100 height=10 alt="0.0%"></td></tr></table>
+        <table border=0 cellspacing=0 cellpadding=1><tr><td class="coverBarOutline"><img src="../emerald.png" width=95 height=10 alt="94.7%"><img src="../snow.png" width=5 height=10 alt="94.7%"></td></tr></table>
       </td>
-      <td class="coverPerLo">0.0&nbsp;%</td>
-      <td class="coverNumLo">0 / 27</td>
-      <td class="coverPerLo">0.0&nbsp;%</td>
-      <td class="coverNumLo">0 / 3</td>
-      <td class="coverPerLo">0.0&nbsp;%</td>
-      <td class="coverNumLo">0 / 2</td>
-    </tr>
-    <tr>
-      <td class="coverFile"><a href="PFL_Relay.t.sol.gcov.html">PFL_Relay.t.sol</a></td>
-      <td class="coverBar" align="center">
-        <table border=0 cellspacing=0 cellpadding=1><tr><td class="coverBarOutline"><img src="../ruby.png" width=63 height=10 alt="63.2%"><img src="../snow.png" width=37 height=10 alt="63.2%"></td></tr></table>
-      </td>
-      <td class="coverPerLo">63.2&nbsp;%</td>
-      <td class="coverNumLo">12 / 19</td>
-      <td class="coverPerLo">57.1&nbsp;%</td>
-      <td class="coverNumLo">4 / 7</td>
-      <td class="coverPerLo">33.3&nbsp;%</td>
-      <td class="coverNumLo">2 / 6</td>
+      <td class="coverPerHi">94.7&nbsp;%</td>
+      <td class="coverNumHi">18 / 19</td>
+      <td class="coverPerLo">71.4&nbsp;%</td>
+      <td class="coverNumLo">5 / 7</td>
+      <td class="coverPerLo">50.0&nbsp;%</td>
+      <td class="coverNumLo">3 / 6</td>
     </tr>
   </table>
   </center>
