Update coverage report

--- a/report/contracts/auction-handler/FastLaneAuctionHandler.sol.func.html
+++ b/report/contracts/auction-handler/FastLaneAuctionHandler.sol.func.html
@@ -31,27 +31,27 @@
             <td class="headerValue">lcov.info</td>
             <td></td>
             <td class="headerItem">Lines:</td>
-            <td class="headerCovTableEntry">81</td>
-            <td class="headerCovTableEntry">92</td>
-            <td class="headerCovTableEntryMed">88.0 %</td>
+            <td class="headerCovTableEntry">59</td>
+            <td class="headerCovTableEntry">76</td>
+            <td class="headerCovTableEntryMed">77.6 %</td>
           </tr>
           <tr>
             <td class="headerItem">Date:</td>
-            <td class="headerValue">2022-12-08 12:51:36</td>
+            <td class="headerValue">2023-05-17 21:56:04</td>
             <td></td>
             <td class="headerItem">Functions:</td>
-            <td class="headerCovTableEntry">24</td>
-            <td class="headerCovTableEntry">31</td>
-            <td class="headerCovTableEntryMed">77.4 %</td>
+            <td class="headerCovTableEntry">15</td>
+            <td class="headerCovTableEntry">19</td>
+            <td class="headerCovTableEntryMed">78.9 %</td>
           </tr>
           <tr>
             <td></td>
             <td></td>
             <td></td>
             <td class="headerItem">Branches:</td>
-            <td class="headerCovTableEntry">33</td>
-            <td class="headerCovTableEntry">44</td>
-            <td class="headerCovTableEntryMed">75.0 %</td>
+            <td class="headerCovTableEntry">25</td>
+            <td class="headerCovTableEntry">40</td>
+            <td class="headerCovTableEntryLo">62.5 %</td>
           </tr>
           <tr><td><img src="../../glass.png" width=3 height=3 alt=""></td></tr>
         </table>
@@ -69,128 +69,80 @@
       <td width="20%" class="tableHead">Hit count <span class="tableHeadSort"><a href="FastLaneAuctionHandler.sol.func-sort-c.html"><img src="../../updown.png" width=10 height=14 alt="Sort by hit count" title="Sort by hit count" border=0></a></span></td>
     </tr>
     <tr>
-              <td class="coverFn"><a href="FastLaneAuctionHandler.sol.gcov.html#220">FastLaneAuctionHandler.</a></td>
+              <td class="coverFn"><a href="FastLaneAuctionHandler.sol.gcov.html#177">FastLaneAuctionHandler.</a></td>
               <td class="coverFnLo">0</td>
             </tr>
     <tr>
-              <td class="coverFn"><a href="FastLaneAuctionHandler.sol.gcov.html#214">FastLaneAuctionHandler._calculateStakeShare</a></td>
+              <td class="coverFn"><a href="FastLaneAuctionHandler.sol.gcov.html#162">FastLaneAuctionHandler._handleBalances</a></td>
               <td class="coverFnHi">4</td>
             </tr>
     <tr>
-              <td class="coverFn"><a href="FastLaneAuctionHandler.sol.gcov.html#196">FastLaneAuctionHandler._handleBalances</a></td>
+              <td class="coverFn"><a href="FastLaneAuctionHandler.sol.gcov.html#111">FastLaneAuctionHandler._payValidatorFee</a></td>
+              <td class="coverFnHi">3</td>
+            </tr>
+    <tr>
+              <td class="coverFn"><a href="FastLaneAuctionHandler.sol.gcov.html#230">FastLaneAuctionHandler.collectFees</a></td>
               <td class="coverFnHi">6</td>
             </tr>
     <tr>
-              <td class="coverFn"><a href="FastLaneAuctionHandler.sol.gcov.html#293">FastLaneAuctionHandler.disableRelayValidator</a></td>
+              <td class="coverFn"><a href="FastLaneAuctionHandler.sol.gcov.html#307">FastLaneAuctionHandler.getValidator</a></td>
+              <td class="coverFnHi">10</td>
+            </tr>
+    <tr>
+              <td class="coverFn"><a href="FastLaneAuctionHandler.sol.gcov.html#291">FastLaneAuctionHandler.getValidatorBalance</a></td>
               <td class="coverFnHi">1</td>
             </tr>
     <tr>
-              <td class="coverFn"><a href="FastLaneAuctionHandler.sol.gcov.html#282">FastLaneAuctionHandler.enableRelayValidator</a></td>
-              <td class="coverFnHi">6</td>
-            </tr>
-    <tr>
-              <td class="coverFn"><a href="FastLaneAuctionHandler.sol.gcov.html#429">FastLaneAuctionHandler.getCurrentStakeBalance</a></td>
-              <td class="coverFnHi">2</td>
-            </tr>
-    <tr>
-              <td class="coverFn"><a href="FastLaneAuctionHandler.sol.gcov.html#425">FastLaneAuctionHandler.getCurrentStakeRatio</a></td>
-              <td class="coverFnLo">0</td>
-            </tr>
-    <tr>
-              <td class="coverFn"><a href="FastLaneAuctionHandler.sol.gcov.html#437">FastLaneAuctionHandler.getPendingDeadline</a></td>
-              <td class="coverFnLo">0</td>
-            </tr>
-    <tr>
-              <td class="coverFn"><a href="FastLaneAuctionHandler.sol.gcov.html#433">FastLaneAuctionHandler.getPendingStakeRatio</a></td>
-              <td class="coverFnLo">0</td>
-            </tr>
-    <tr>
-              <td class="coverFn"><a href="FastLaneAuctionHandler.sol.gcov.html#409">FastLaneAuctionHandler.getValidatorBalance</a></td>
-              <td class="coverFnHi">2</td>
-            </tr>
-    <tr>
-              <td class="coverFn"><a href="FastLaneAuctionHandler.sol.gcov.html#414">FastLaneAuctionHandler.getValidatorPayee</a></td>
-              <td class="coverFnHi">1</td>
-            </tr>
-    <tr>
-              <td class="coverFn"><a href="FastLaneAuctionHandler.sol.gcov.html#421">FastLaneAuctionHandler.getValidatorRecipient</a></td>
-              <td class="coverFnLo">0</td>
-            </tr>
-    <tr>
-              <td class="coverFn"><a href="FastLaneAuctionHandler.sol.gcov.html#441">FastLaneAuctionHandler.getValidatorStatus</a></td>
-              <td class="coverFnLo">0</td>
-            </tr>
-    <tr>
-              <td class="coverFn"><a href="FastLaneAuctionHandler.sol.gcov.html#445">FastLaneAuctionHandler.humanizeError</a></td>
-              <td class="coverFnHi">2</td>
-            </tr>
-    <tr>
-              <td class="coverFn"><a href="FastLaneAuctionHandler.sol.gcov.html#396">FastLaneAuctionHandler.isPayeeTimeLocked</a></td>
-              <td class="coverFnHi">2</td>
-            </tr>
-    <tr>
-              <td class="coverFn"><a href="FastLaneAuctionHandler.sol.gcov.html#400">FastLaneAuctionHandler.isValidPayee</a></td>
-              <td class="coverFnHi">2</td>
-            </tr>
-    <tr>
-              <td class="coverFn"><a href="FastLaneAuctionHandler.sol.gcov.html#352">FastLaneAuctionHandler.payValidator</a></td>
+              <td class="coverFn"><a href="FastLaneAuctionHandler.sol.gcov.html#296">FastLaneAuctionHandler.getValidatorPayee</a></td>
               <td class="coverFnHi">8</td>
             </tr>
     <tr>
-              <td class="coverFn"><a href="FastLaneAuctionHandler.sol.gcov.html#302">FastLaneAuctionHandler.recoverDust</a></td>
-              <td class="coverFnHi">1</td>
-            </tr>
-    <tr>
-              <td class="coverFn"><a href="FastLaneAuctionHandler.sol.gcov.html#254">FastLaneAuctionHandler.setFastLaneStakeShare</a></td>
-              <td class="coverFnHi">3</td>
-            </tr>
-    <tr>
-              <td class="coverFn"><a href="FastLaneAuctionHandler.sol.gcov.html#246">FastLaneAuctionHandler.setMininumBidAmount</a></td>
-              <td class="coverFnHi">1</td>
-            </tr>
-    <tr>
-              <td class="coverFn"><a href="FastLaneAuctionHandler.sol.gcov.html#230">FastLaneAuctionHandler.setPausedState</a></td>
-              <td class="coverFnHi">1</td>
-            </tr>
-    <tr>
-              <td class="coverFn"><a href="FastLaneAuctionHandler.sol.gcov.html#238">FastLaneAuctionHandler.setSimulatorState</a></td>
-              <td class="coverFnHi">1</td>
-            </tr>
-    <tr>
-              <td class="coverFn"><a href="FastLaneAuctionHandler.sol.gcov.html#162">FastLaneAuctionHandler.simulateFlashBid</a></td>
-              <td class="coverFnHi">2</td>
-            </tr>
-    <tr>
-              <td class="coverFn"><a href="FastLaneAuctionHandler.sol.gcov.html#451">FastLaneAuctionHandler.slice</a></td>
-              <td class="coverFnHi">4</td>
-            </tr>
-    <tr>
-              <td class="coverFn"><a href="FastLaneAuctionHandler.sol.gcov.html#124">FastLaneAuctionHandler.submitFlashBid</a></td>
-              <td class="coverFnHi">19</td>
-            </tr>
-    <tr>
-              <td class="coverFn"><a href="FastLaneAuctionHandler.sol.gcov.html#385">FastLaneAuctionHandler.triggerPendingStakeShareUpdate</a></td>
-              <td class="coverFnHi">3</td>
-            </tr>
-    <tr>
-              <td class="coverFn"><a href="FastLaneAuctionHandler.sol.gcov.html#369">FastLaneAuctionHandler.updateValidatorPayee</a></td>
-              <td class="coverFnHi">2</td>
-            </tr>
-    <tr>
-              <td class="coverFn"><a href="FastLaneAuctionHandler.sol.gcov.html#404">FastLaneAuctionHandler.validatorPayee</a></td>
-              <td class="coverFnHi">3</td>
-            </tr>
-    <tr>
-              <td class="coverFn"><a href="FastLaneAuctionHandler.sol.gcov.html#267">FastLaneAuctionHandler.withdrawStakeShare</a></td>
-              <td class="coverFnHi">4</td>
-            </tr>
-    <tr>
-              <td class="coverFn"><a href="FastLaneAuctionHandler.sol.gcov.html#331">FastLaneAuctionHandler.withdrawStuckERC20</a></td>
+              <td class="coverFn"><a href="FastLaneAuctionHandler.sol.gcov.html#303">FastLaneAuctionHandler.getValidatorRecipient</a></td>
               <td class="coverFnLo">0</td>
             </tr>
     <tr>
-              <td class="coverFn"><a href="FastLaneAuctionHandler.sol.gcov.html#317">FastLaneAuctionHandler.withdrawStuckNativeToken</a></td>
-              <td class="coverFnHi">1</td>
+              <td class="coverFn"><a href="FastLaneAuctionHandler.sol.gcov.html#318">FastLaneAuctionHandler.humanizeError</a></td>
+              <td class="coverFnHi">2</td>
+            </tr>
+    <tr>
+              <td class="coverFn"><a href="FastLaneAuctionHandler.sol.gcov.html#277">FastLaneAuctionHandler.isPayeeTimeLocked</a></td>
+              <td class="coverFnHi">3</td>
+            </tr>
+    <tr>
+              <td class="coverFn"><a href="FastLaneAuctionHandler.sol.gcov.html#281">FastLaneAuctionHandler.isValidPayee</a></td>
+              <td class="coverFnHi">2</td>
+            </tr>
+    <tr>
+              <td class="coverFn"><a href="FastLaneAuctionHandler.sol.gcov.html#107">FastLaneAuctionHandler.payValidatorFee</a></td>
+              <td class="coverFnHi">3</td>
+            </tr>
+    <tr>
+              <td class="coverFn"><a href="FastLaneAuctionHandler.sol.gcov.html#128">FastLaneAuctionHandler.simulateFlashBid</a></td>
+              <td class="coverFnHi">2</td>
+            </tr>
+    <tr>
+              <td class="coverFn"><a href="FastLaneAuctionHandler.sol.gcov.html#324">FastLaneAuctionHandler.slice</a></td>
+              <td class="coverFnHi">4</td>
+            </tr>
+    <tr>
+              <td class="coverFn"><a href="FastLaneAuctionHandler.sol.gcov.html#78">FastLaneAuctionHandler.submitFlashBid</a></td>
+              <td class="coverFnHi">13</td>
+            </tr>
+    <tr>
+              <td class="coverFn"><a href="FastLaneAuctionHandler.sol.gcov.html#186">FastLaneAuctionHandler.syncStuckNativeToken</a></td>
+              <td class="coverFnLo">0</td>
+            </tr>
+    <tr>
+              <td class="coverFn"><a href="FastLaneAuctionHandler.sol.gcov.html#249">FastLaneAuctionHandler.updateValidatorPayee</a></td>
+              <td class="coverFnHi">9</td>
+            </tr>
+    <tr>
+              <td class="coverFn"><a href="FastLaneAuctionHandler.sol.gcov.html#285">FastLaneAuctionHandler.validatorPayee</a></td>
+              <td class="coverFnHi">3</td>
+            </tr>
+    <tr>
+              <td class="coverFn"><a href="FastLaneAuctionHandler.sol.gcov.html#209">FastLaneAuctionHandler.withdrawStuckERC20</a></td>
+              <td class="coverFnLo">0</td>
             </tr>
   </table>
   <br>
