--- a/report/contracts/searcher-direct/FastLaneSearcherDirect.sol.gcov.html
+++ b/report/contracts/searcher-direct/FastLaneSearcherDirect.sol.gcov.html
@@ -37,7 +37,7 @@
           </tr>
           <tr>
             <td class="headerItem">Date:</td>
-            <td class="headerValue">2022-12-08 12:51:36</td>
+            <td class="headerValue">2023-05-17 21:56:04</td>
             <td></td>
             <td class="headerItem">Functions:</td>
             <td class="headerCovTableEntry">7</td>
@@ -140,8 +140,8 @@
 <a name="69"><span class="lineNum">      69 </span>                :            :     }</a>
 <a name="70"><span class="lineNum">      70 </span>                :            : </a>
 <a name="71"><span class="lineNum">      71 </span>                :            :     function setPFLAuctionAddress(address _pflAuction) public {</a>
-<a name="72"><span class="lineNum">      72 </span>        [<span class="branchNoExec" title="Branch 0 was not executed"> # </span><span class="branchCov" title="Branch 1 was taken 1 time"> + </span>]:<span class="lineCov">          1 :         require(msg.sender == owner, &quot;OriginEOANotOwner&quot;);</span></a>
-<a name="73"><span class="lineNum">      73 </span>                :<span class="lineCov">          1 :         PFLAuction = payable(_pflAuction);</span></a>
+<a name="72"><span class="lineNum">      72 </span>        [<span class="branchNoExec" title="Branch 0 was not executed"> # </span><span class="branchCov" title="Branch 1 was taken 2 times"> + </span>]:<span class="lineCov">          2 :         require(msg.sender == owner, &quot;OriginEOANotOwner&quot;);</span></a>
+<a name="73"><span class="lineNum">      73 </span>                :<span class="lineCov">          2 :         PFLAuction = payable(_pflAuction);</span></a>
 <a name="74"><span class="lineNum">      74 </span>                :            :     }</a>
 <a name="75"><span class="lineNum">      75 </span>                :            : </a>
 <a name="76"><span class="lineNum">      76 </span>                :            :     function approveFastLaneEOA(address _eoaAddress) public {</a>
