--- a/report/index-sort-b.html
+++ b/report/index-sort-b.html
@@ -31,27 +31,27 @@
             <td class="headerValue">lcov.info</td>
             <td></td>
             <td class="headerItem">Lines:</td>
-            <td class="headerCovTableEntry">300</td>
-            <td class="headerCovTableEntry">453</td>
-            <td class="headerCovTableEntryLo">66.2 %</td>
+            <td class="headerCovTableEntry">272</td>
+            <td class="headerCovTableEntry">434</td>
+            <td class="headerCovTableEntryLo">62.7 %</td>
           </tr>
           <tr>
             <td class="headerItem">Date:</td>
-            <td class="headerValue">2022-12-08 12:51:36</td>
+            <td class="headerValue">2023-05-17 21:56:04</td>
             <td></td>
             <td class="headerItem">Functions:</td>
-            <td class="headerCovTableEntry">79</td>
-            <td class="headerCovTableEntry">111</td>
-            <td class="headerCovTableEntryLo">71.2 %</td>
+            <td class="headerCovTableEntry">69</td>
+            <td class="headerCovTableEntry">99</td>
+            <td class="headerCovTableEntryLo">69.7 %</td>
           </tr>
           <tr>
             <td></td>
             <td></td>
             <td></td>
             <td class="headerItem">Branches:</td>
-            <td class="headerCovTableEntry">115</td>
-            <td class="headerCovTableEntry">188</td>
-            <td class="headerCovTableEntryLo">61.2 %</td>
+            <td class="headerCovTableEntry">106</td>
+            <td class="headerCovTableEntry">182</td>
+            <td class="headerCovTableEntryLo">58.2 %</td>
           </tr>
           <tr><td><img src="glass.png" width=3 height=3 alt=""></td></tr>
         </table>
@@ -135,11 +135,23 @@
                 <table border=0 cellspacing=0 cellpadding=1><tr><td class="coverBarOutline"><img src="snow.png" width=100 height=10 alt="0.0%"></td></tr></table>
       </td>
       <td class="coverPerLo">0.0&nbsp;%</td>
-      <td class="coverNumLo">0 / 23</td>
+      <td class="coverNumLo">0 / 20</td>
       <td class="coverPerLo">0.0&nbsp;%</td>
       <td class="coverNumLo">0 / 9</td>
       <td class="coverPerLo">0.0&nbsp;%</td>
-      <td class="coverNumLo">0 / 18</td>
+      <td class="coverNumLo">0 / 16</td>
+    </tr>
+    <tr>
+      <td class="coverFile"><a href="test/index.html">test</a></td>
+      <td class="coverBar" align="center">
+        <table border=0 cellspacing=0 cellpadding=1><tr><td class="coverBarOutline"><img src="ruby.png" width=63 height=10 alt="63.2%"><img src="snow.png" width=37 height=10 alt="63.2%"></td></tr></table>
+      </td>
+      <td class="coverPerLo">63.2&nbsp;%</td>
+      <td class="coverNumLo">12 / 19</td>
+      <td class="coverPerLo">57.1&nbsp;%</td>
+      <td class="coverNumLo">4 / 7</td>
+      <td class="coverPerLo">33.3&nbsp;%</td>
+      <td class="coverNumLo">2 / 6</td>
     </tr>
     <tr>
       <td class="coverFile"><a href="contracts/searcher-direct/index.html">contracts/searcher-direct</a></td>
@@ -154,28 +166,16 @@
       <td class="coverNumLo">9 / 24</td>
     </tr>
     <tr>
-      <td class="coverFile"><a href="test/index.html">test</a></td>
-      <td class="coverBar" align="center">
-        <table border=0 cellspacing=0 cellpadding=1><tr><td class="coverBarOutline"><img src="emerald.png" width=95 height=10 alt="94.7%"><img src="snow.png" width=5 height=10 alt="94.7%"></td></tr></table>
-      </td>
-      <td class="coverPerHi">94.7&nbsp;%</td>
-      <td class="coverNumHi">18 / 19</td>
-      <td class="coverPerLo">71.4&nbsp;%</td>
-      <td class="coverNumLo">5 / 7</td>
-      <td class="coverPerLo">50.0&nbsp;%</td>
-      <td class="coverNumLo">3 / 6</td>
-    </tr>
-    <tr>
       <td class="coverFile"><a href="contracts/auction-handler/index.html">contracts/auction-handler</a></td>
       <td class="coverBar" align="center">
-        <table border=0 cellspacing=0 cellpadding=1><tr><td class="coverBarOutline"><img src="amber.png" width=88 height=10 alt="88.0%"><img src="snow.png" width=12 height=10 alt="88.0%"></td></tr></table>
+        <table border=0 cellspacing=0 cellpadding=1><tr><td class="coverBarOutline"><img src="amber.png" width=78 height=10 alt="77.6%"><img src="snow.png" width=22 height=10 alt="77.6%"></td></tr></table>
       </td>
-      <td class="coverPerMed">88.0&nbsp;%</td>
-      <td class="coverNumMed">81 / 92</td>
-      <td class="coverPerMed">77.4&nbsp;%</td>
-      <td class="coverNumMed">24 / 31</td>
-      <td class="coverPerMed">75.0&nbsp;%</td>
-      <td class="coverNumMed">33 / 44</td>
+      <td class="coverPerMed">77.6&nbsp;%</td>
+      <td class="coverNumMed">59 / 76</td>
+      <td class="coverPerMed">78.9&nbsp;%</td>
+      <td class="coverNumMed">15 / 19</td>
+      <td class="coverPerLo">62.5&nbsp;%</td>
+      <td class="coverNumLo">25 / 40</td>
     </tr>
     <tr>
       <td class="coverFile"><a href="contracts/legacy/index.html">contracts/legacy</a></td>
