--- a/report/test/PFL_AuctionHandler.t.sol.func.html
+++ b/report/test/PFL_AuctionHandler.t.sol.func.html
@@ -31,27 +31,27 @@
             <td class="headerValue">lcov.info</td>
             <td></td>
             <td class="headerItem">Lines:</td>
-            <td class="headerCovTableEntry">18</td>
+            <td class="headerCovTableEntry">12</td>
             <td class="headerCovTableEntry">19</td>
-            <td class="headerCovTableEntryHi">94.7 %</td>
+            <td class="headerCovTableEntryLo">63.2 %</td>
           </tr>
           <tr>
             <td class="headerItem">Date:</td>
-            <td class="headerValue">2022-12-08 12:51:36</td>
+            <td class="headerValue">2023-05-17 21:56:04</td>
             <td></td>
             <td class="headerItem">Functions:</td>
-            <td class="headerCovTableEntry">5</td>
+            <td class="headerCovTableEntry">4</td>
             <td class="headerCovTableEntry">7</td>
-            <td class="headerCovTableEntryLo">71.4 %</td>
+            <td class="headerCovTableEntryLo">57.1 %</td>
           </tr>
           <tr>
             <td></td>
             <td></td>
             <td></td>
             <td class="headerItem">Branches:</td>
-            <td class="headerCovTableEntry">3</td>
+            <td class="headerCovTableEntry">2</td>
             <td class="headerCovTableEntry">6</td>
-            <td class="headerCovTableEntryLo">50.0 %</td>
+            <td class="headerCovTableEntryLo">33.3 %</td>
           </tr>
           <tr><td><img src="../glass.png" width=3 height=3 alt=""></td></tr>
         </table>
@@ -69,32 +69,32 @@
       <td width="20%" class="tableHead">Hit count <span class="tableHeadSort"><a href="PFL_AuctionHandler.t.sol.func-sort-c.html"><img src="../updown.png" width=10 height=14 alt="Sort by hit count" title="Sort by hit count" border=0></a></span></td>
     </tr>
     <tr>
-              <td class="coverFn"><a href="PFL_AuctionHandler.t.sol.gcov.html#482">BrokenSearcherForgotFastLaneCallFn.</a></td>
+              <td class="coverFn"><a href="PFL_AuctionHandler.t.sol.gcov.html#380">BrokenSearcherForgotFastLaneCallFn.</a></td>
               <td class="coverFnLo">0</td>
             </tr>
     <tr>
-              <td class="coverFn"><a href="PFL_AuctionHandler.t.sol.gcov.html#486">BrokenSearcherForgotReturnBoolBytes.fastLaneCall</a></td>
+              <td class="coverFn"><a href="PFL_AuctionHandler.t.sol.gcov.html#384">BrokenSearcherForgotReturnBoolBytes.fastLaneCall</a></td>
               <td class="coverFnHi">1</td>
             </tr>
     <tr>
-              <td class="coverFn"><a href="PFL_AuctionHandler.t.sol.gcov.html#497">BrokenSearcherRepayer.fastLaneCall</a></td>
+              <td class="coverFn"><a href="PFL_AuctionHandler.t.sol.gcov.html#395">BrokenSearcherRepayer.fastLaneCall</a></td>
               <td class="coverFnHi">1</td>
             </tr>
     <tr>
-              <td class="coverFn"><a href="PFL_AuctionHandler.t.sol.gcov.html#508">BrokenSearcherRepayerPartial.fastLaneCall</a></td>
+              <td class="coverFn"><a href="PFL_AuctionHandler.t.sol.gcov.html#406">BrokenSearcherRepayerPartial.fastLaneCall</a></td>
               <td class="coverFnHi">1</td>
             </tr>
     <tr>
-              <td class="coverFn"><a href="PFL_AuctionHandler.t.sol.gcov.html#475">BrokenUniswap.sickTrade</a></td>
+              <td class="coverFn"><a href="PFL_AuctionHandler.t.sol.gcov.html#373">BrokenUniswap.sickTrade</a></td>
               <td class="coverFnLo">0</td>
             </tr>
     <tr>
-              <td class="coverFn"><a href="PFL_AuctionHandler.t.sol.gcov.html#528">SearcherRepayerEcho.fastLaneCall</a></td>
-              <td class="coverFnHi">3</td>
+              <td class="coverFn"><a href="PFL_AuctionHandler.t.sol.gcov.html#426">SearcherRepayerEcho.fastLaneCall</a></td>
+              <td class="coverFnHi">2</td>
             </tr>
     <tr>
-              <td class="coverFn"><a href="PFL_AuctionHandler.t.sol.gcov.html#546">SearcherRepayerOverpayerDouble.fastLaneCall</a></td>
-              <td class="coverFnHi">1</td>
+              <td class="coverFn"><a href="PFL_AuctionHandler.t.sol.gcov.html#445">SearcherRepayerOverpayerDouble.fastLaneCall</a></td>
+              <td class="coverFnLo">0</td>
             </tr>
   </table>
   <br>
