--- a/report/test/index-sort-f.html
+++ b/report/test/index-sort-f.html
@@ -31,27 +31,27 @@
             <td class="headerValue">lcov.info</td>
             <td></td>
             <td class="headerItem">Lines:</td>
-            <td class="headerCovTableEntry">18</td>
+            <td class="headerCovTableEntry">12</td>
             <td class="headerCovTableEntry">19</td>
-            <td class="headerCovTableEntryHi">94.7 %</td>
+            <td class="headerCovTableEntryLo">63.2 %</td>
           </tr>
           <tr>
             <td class="headerItem">Date:</td>
-            <td class="headerValue">2022-12-08 12:51:36</td>
+            <td class="headerValue">2023-05-17 21:56:04</td>
             <td></td>
             <td class="headerItem">Functions:</td>
-            <td class="headerCovTableEntry">5</td>
+            <td class="headerCovTableEntry">4</td>
             <td class="headerCovTableEntry">7</td>
-            <td class="headerCovTableEntryLo">71.4 %</td>
+            <td class="headerCovTableEntryLo">57.1 %</td>
           </tr>
           <tr>
             <td></td>
             <td></td>
             <td></td>
             <td class="headerItem">Branches:</td>
-            <td class="headerCovTableEntry">3</td>
+            <td class="headerCovTableEntry">2</td>
             <td class="headerCovTableEntry">6</td>
-            <td class="headerCovTableEntryLo">50.0 %</td>
+            <td class="headerCovTableEntryLo">33.3 %</td>
           </tr>
           <tr><td><img src="../glass.png" width=3 height=3 alt=""></td></tr>
         </table>
@@ -84,14 +84,14 @@
     <tr>
       <td class="coverFile"><a href="PFL_AuctionHandler.t.sol.gcov.html">PFL_AuctionHandler.t.sol</a></td>
       <td class="coverBar" align="center">
-        <table border=0 cellspacing=0 cellpadding=1><tr><td class="coverBarOutline"><img src="../emerald.png" width=95 height=10 alt="94.7%"><img src="../snow.png" width=5 height=10 alt="94.7%"></td></tr></table>
+        <table border=0 cellspacing=0 cellpadding=1><tr><td class="coverBarOutline"><img src="../ruby.png" width=63 height=10 alt="63.2%"><img src="../snow.png" width=37 height=10 alt="63.2%"></td></tr></table>
       </td>
-      <td class="coverPerHi">94.7&nbsp;%</td>
-      <td class="coverNumHi">18 / 19</td>
-      <td class="coverPerLo">71.4&nbsp;%</td>
-      <td class="coverNumLo">5 / 7</td>
-      <td class="coverPerLo">50.0&nbsp;%</td>
-      <td class="coverNumLo">3 / 6</td>
+      <td class="coverPerLo">63.2&nbsp;%</td>
+      <td class="coverNumLo">12 / 19</td>
+      <td class="coverPerLo">57.1&nbsp;%</td>
+      <td class="coverNumLo">4 / 7</td>
+      <td class="coverPerLo">33.3&nbsp;%</td>
+      <td class="coverNumLo">2 / 6</td>
     </tr>
   </table>
   </center>
