--- a/report/contracts/auction-handler/FastLaneAuctionHandler.sol.gcov.html
+++ b/report/contracts/auction-handler/FastLaneAuctionHandler.sol.gcov.html
@@ -31,18 +31,18 @@
             <td class="headerValue">lcov.info</td>
             <td></td>
             <td class="headerItem">Lines:</td>
-            <td class="headerCovTableEntry">72</td>
+            <td class="headerCovTableEntry">73</td>
             <td class="headerCovTableEntry">76</td>
-            <td class="headerCovTableEntryHi">94.7 %</td>
+            <td class="headerCovTableEntryHi">96.1 %</td>
           </tr>
           <tr>
             <td class="headerItem">Date:</td>
-            <td class="headerValue">2023-05-18 13:13:03</td>
+            <td class="headerValue">2023-05-18 13:25:21</td>
             <td></td>
             <td class="headerItem">Functions:</td>
-            <td class="headerCovTableEntry">17</td>
+            <td class="headerCovTableEntry">18</td>
             <td class="headerCovTableEntry">19</td>
-            <td class="headerCovTableEntryMed">89.5 %</td>
+            <td class="headerCovTableEntryHi">94.7 %</td>
           </tr>
           <tr>
             <td></td>
@@ -178,14 +178,14 @@
 <a name="107"><span class="lineNum">     107 </span>                :            : </a>
 <a name="108"><span class="lineNum">     108 </span>                :            :     /// @notice Pays the validator for fees / revenue sharing that is collected outside of submitFlashBid function</a>
 <a name="109"><span class="lineNum">     109 </span>                :            :     function payValidatorFee(address _payor) external payable nonReentrant {</a>
-<a name="110"><span class="lineNum">     110 </span>                :<span class="lineCov">          8 :         _payValidatorFee(_payor);</span></a>
+<a name="110"><span class="lineNum">     110 </span>                :<span class="lineCov">          9 :         _payValidatorFee(_payor);</span></a>
 <a name="111"><span class="lineNum">     111 </span>                :            :     }</a>
 <a name="112"><span class="lineNum">     112 </span>                :            : </a>
 <a name="113"><span class="lineNum">     113 </span>                :            :     function _payValidatorFee(address _payor) internal {</a>
-<a name="114"><span class="lineNum">     114 </span>        [<span class="branchCov" title="Branch 0 was taken 1 time"> + </span><span class="branchCov" title="Branch 1 was taken 7 times"> + </span>]:<span class="lineCov">          8 :         require(msg.value &gt; 0, &quot;msg.value = 0&quot;);</span></a>
-<a name="115"><span class="lineNum">     115 </span>                :<span class="lineCov">          7 :         validatorsBalanceMap[block.coinbase] += msg.value;</span></a>
-<a name="116"><span class="lineNum">     116 </span>                :<span class="lineCov">          7 :         validatorsTotal += msg.value;</span></a>
-<a name="117"><span class="lineNum">     117 </span>                :<span class="lineCov">          7 :         emit RelayFeeCollected(_payor, block.coinbase, msg.value);</span></a>
+<a name="114"><span class="lineNum">     114 </span>        [<span class="branchCov" title="Branch 0 was taken 1 time"> + </span><span class="branchCov" title="Branch 1 was taken 8 times"> + </span>]:<span class="lineCov">          9 :         require(msg.value &gt; 0, &quot;msg.value = 0&quot;);</span></a>
+<a name="115"><span class="lineNum">     115 </span>                :<span class="lineCov">          8 :         validatorsBalanceMap[block.coinbase] += msg.value;</span></a>
+<a name="116"><span class="lineNum">     116 </span>                :<span class="lineCov">          8 :         validatorsTotal += msg.value;</span></a>
+<a name="117"><span class="lineNum">     117 </span>                :<span class="lineCov">          8 :         emit RelayFeeCollected(_payor, block.coinbase, msg.value);</span></a>
 <a name="118"><span class="lineNum">     118 </span>                :            :     }</a>
 <a name="119"><span class="lineNum">     119 </span>                :            : </a>
 <a name="120"><span class="lineNum">     120 </span>                :            :     /// @notice Submits a SIMULATED flash bid. THE HTTP RELAY won't accept calls for this function.</a>
@@ -321,26 +321,26 @@
 <a name="250"><span class="lineNum">     250 </span>                :            :     /// @dev Callable by either validator address, their payee address (if not changed recently), or PFL.</a>
 <a name="251"><span class="lineNum">     251 </span>                :            :     function updateValidatorPayee(address _payee) external validPayee nonReentrant {</a>
 <a name="252"><span class="lineNum">     252 </span>                :            :         // NOTE: Payee cannot be updated until there is a valid balance in the fee vault</a>
-<a name="253"><span class="lineNum">     253 </span>        [<span class="branchNoExec" title="Branch 0 was not executed"> # </span><span class="branchCov" title="Branch 1 was taken 6 times"> + </span>]:<span class="lineCov">          6 :         if (_payee == address(0)) revert RelayCannotBeZero();</span></a>
-<a name="254"><span class="lineNum">     254 </span>        [<span class="branchNoExec" title="Branch 0 was not executed"> # </span><span class="branchCov" title="Branch 1 was taken 6 times"> + </span>]:<span class="lineCov">          6 :         if (_payee == address(this)) revert RelayCannotBeSelf();</span></a>
+<a name="253"><span class="lineNum">     253 </span>        [<span class="branchNoExec" title="Branch 0 was not executed"> # </span><span class="branchCov" title="Branch 1 was taken 7 times"> + </span>]:<span class="lineCov">          7 :         if (_payee == address(0)) revert RelayCannotBeZero();</span></a>
+<a name="254"><span class="lineNum">     254 </span>        [<span class="branchNoExec" title="Branch 0 was not executed"> # </span><span class="branchCov" title="Branch 1 was taken 7 times"> + </span>]:<span class="lineCov">          7 :         if (_payee == address(this)) revert RelayCannotBeSelf();</span></a>
 <a name="255"><span class="lineNum">     255 </span>                :            :         </a>
-<a name="256"><span class="lineNum">     256 </span>                :<span class="lineCov">          6 :         address _validator = getValidator();</span></a>
+<a name="256"><span class="lineNum">     256 </span>                :<span class="lineCov">          7 :         address _validator = getValidator();</span></a>
 <a name="257"><span class="lineNum">     257 </span>                :            : </a>
-<a name="258"><span class="lineNum">     258 </span>        [<span class="branchNoExec" title="Branch 0 was not executed"> # </span><span class="branchCov" title="Branch 1 was taken 6 times"> + </span>]:<span class="lineCov">          6 :         require(payeeMap[_validator] == address(0) &amp;&amp; payeeMap[_payee] == address(0), &quot;invalid payee&quot;);</span></a>
+<a name="258"><span class="lineNum">     258 </span>        [<span class="branchNoExec" title="Branch 0 was not executed"> # </span><span class="branchCov" title="Branch 1 was taken 7 times"> + </span>]:<span class="lineCov">          7 :         require(payeeMap[_validator] == address(0) &amp;&amp; payeeMap[_payee] == address(0), &quot;invalid payee&quot;);</span></a>
 <a name="259"><span class="lineNum">     259 </span>                :            : </a>
-<a name="260"><span class="lineNum">     260 </span>                :<span class="lineCov">          6 :         address _formerPayee = validatorsDataMap[_validator].payee;</span></a>
+<a name="260"><span class="lineNum">     260 </span>                :<span class="lineCov">          7 :         address _formerPayee = validatorsDataMap[_validator].payee;</span></a>
 <a name="261"><span class="lineNum">     261 </span>                :            : </a>
-<a name="262"><span class="lineNum">     262 </span>        [<span class="branchNoExec" title="Branch 0 was not executed"> # </span><span class="branchCov" title="Branch 1 was taken 6 times"> + </span>]:<span class="lineCov">          6 :         require(_formerPayee != _payee, &quot;not a new payee&quot;);</span></a>
+<a name="262"><span class="lineNum">     262 </span>        [<span class="branchNoExec" title="Branch 0 was not executed"> # </span><span class="branchCov" title="Branch 1 was taken 7 times"> + </span>]:<span class="lineCov">          7 :         require(_formerPayee != _payee, &quot;not a new payee&quot;);</span></a>
 <a name="263"><span class="lineNum">     263 </span>                :            : </a>
-<a name="264"><span class="lineNum">     264 </span>        [<span class="branchCov" title="Branch 0 was taken 1 time"> + </span><span class="branchCov" title="Branch 1 was taken 6 times"> + </span>]:<span class="lineCov">          6 :         if (_formerPayee != address(0)) {</span></a>
+<a name="264"><span class="lineNum">     264 </span>        [<span class="branchCov" title="Branch 0 was taken 1 time"> + </span><span class="branchCov" title="Branch 1 was taken 7 times"> + </span>]:<span class="lineCov">          7 :         if (_formerPayee != address(0)) {</span></a>
 <a name="265"><span class="lineNum">     265 </span>                :<span class="lineCov">          1 :             payeeMap[_formerPayee] = address(0);</span></a>
 <a name="266"><span class="lineNum">     266 </span>                :            :         }</a>
 <a name="267"><span class="lineNum">     267 </span>                :            : </a>
-<a name="268"><span class="lineNum">     268 </span>                :<span class="lineCov">          6 :         validatorsDataMap[_validator].payee = _payee;</span></a>
-<a name="269"><span class="lineNum">     269 </span>                :<span class="lineCov">          6 :         validatorsDataMap[_validator].timeUpdated = block.timestamp;</span></a>
-<a name="270"><span class="lineNum">     270 </span>                :<span class="lineCov">          6 :         payeeMap[_payee] = _validator;</span></a>
+<a name="268"><span class="lineNum">     268 </span>                :<span class="lineCov">          7 :         validatorsDataMap[_validator].payee = _payee;</span></a>
+<a name="269"><span class="lineNum">     269 </span>                :<span class="lineCov">          7 :         validatorsDataMap[_validator].timeUpdated = block.timestamp;</span></a>
+<a name="270"><span class="lineNum">     270 </span>                :<span class="lineCov">          7 :         payeeMap[_payee] = _validator;</span></a>
 <a name="271"><span class="lineNum">     271 </span>                :            : </a>
-<a name="272"><span class="lineNum">     272 </span>                :<span class="lineCov">          6 :         emit RelayValidatorPayeeUpdated(_validator, _payee, msg.sender);   </span></a>
+<a name="272"><span class="lineNum">     272 </span>                :<span class="lineCov">          7 :         emit RelayValidatorPayeeUpdated(_validator, _payee, msg.sender);   </span></a>
 <a name="273"><span class="lineNum">     273 </span>                :            :     }</a>
 <a name="274"><span class="lineNum">     274 </span>                :            : </a>
 <a name="275"><span class="lineNum">     275 </span>                :            :     /***********************************|</a>
@@ -348,7 +348,7 @@
 <a name="277"><span class="lineNum">     277 </span>                :            :     |__________________________________*/</a>
 <a name="278"><span class="lineNum">     278 </span>                :            : </a>
 <a name="279"><span class="lineNum">     279 </span>                :            :     function isPayeeTimeLocked(address _validator) public view returns (bool _isTimeLocked) {</a>
-<a name="280"><span class="lineNum">     280 </span>                :<span class="lineCov">         14 :         _isTimeLocked = block.timestamp &lt; validatorsDataMap[_validator].timeUpdated + BLOCK_TIMELOCK;</span></a>
+<a name="280"><span class="lineNum">     280 </span>                :<span class="lineCov">         16 :         _isTimeLocked = block.timestamp &lt; validatorsDataMap[_validator].timeUpdated + BLOCK_TIMELOCK;</span></a>
 <a name="281"><span class="lineNum">     281 </span>                :            :     }</a>
 <a name="282"><span class="lineNum">     282 </span>                :            : </a>
 <a name="283"><span class="lineNum">     283 </span>                :            :     function isValidPayee(address _validator, address _payee) public view returns (bool _valid) {</a>
@@ -356,8 +356,8 @@
 <a name="285"><span class="lineNum">     285 </span>                :            :     }</a>
 <a name="286"><span class="lineNum">     286 </span>                :            : </a>
 <a name="287"><span class="lineNum">     287 </span>                :            :     function validatorPayee(address _validator) internal view returns (address _recipient) {</a>
-<a name="288"><span class="lineNum">     288 </span>                :<span class="lineCov">          3 :         address _payee = validatorsDataMap[_validator].payee;</span></a>
-<a name="289"><span class="lineNum">     289 </span>                :<span class="lineCov">          3 :         _recipient = !isPayeeTimeLocked(_validator) &amp;&amp; _payee != address(0) ? _payee : _validator;</span></a>
+<a name="288"><span class="lineNum">     288 </span>                :<span class="lineCov">          5 :         address _payee = validatorsDataMap[_validator].payee;</span></a>
+<a name="289"><span class="lineNum">     289 </span>                :<span class="lineCov">          5 :         _recipient = !isPayeeTimeLocked(_validator) &amp;&amp; _payee != address(0) ? _payee : _validator;</span></a>
 <a name="290"><span class="lineNum">     290 </span>                :            :     }</a>
 <a name="291"><span class="lineNum">     291 </span>                :            : </a>
 <a name="292"><span class="lineNum">     292 </span>                :            :     /// @notice Returns validator pending balance</a>
@@ -374,12 +374,12 @@
 <a name="303"><span class="lineNum">     303 </span>                :            :     /// @dev Will return the Payee if blockTimeLock has passed, will return Validator if not.</a>
 <a name="304"><span class="lineNum">     304 </span>                :            :     /// @param _validator Address</a>
 <a name="305"><span class="lineNum">     305 </span>                :            :     function getValidatorRecipient(address _validator) public view returns (address _recipient) {</a>
-<a name="306"><span class="lineNum">     306 </span>                :<span class="lineNoCov">          0 :         _recipient = validatorPayee(_validator);</span></a>
+<a name="306"><span class="lineNum">     306 </span>                :<span class="lineCov">          2 :         _recipient = validatorPayee(_validator);</span></a>
 <a name="307"><span class="lineNum">     307 </span>                :            :     }</a>
 <a name="308"><span class="lineNum">     308 </span>                :            : </a>
 <a name="309"><span class="lineNum">     309 </span>                :            :     function getValidator() internal view returns (address) {</a>
-<a name="310"><span class="lineNum">     310 </span>        [<span class="branchCov" title="Branch 0 was taken 9 times"> + </span><span class="branchCov" title="Branch 1 was taken 3 times"> + </span>]:<span class="lineCov">         12 :         if (validatorsBalanceMap[msg.sender] &gt; 0) {</span></a>
-<a name="311"><span class="lineNum">     311 </span>                :<span class="lineCov">          9 :             return msg.sender;</span></a>
+<a name="310"><span class="lineNum">     310 </span>        [<span class="branchCov" title="Branch 0 was taken 10 times"> + </span><span class="branchCov" title="Branch 1 was taken 3 times"> + </span>]:<span class="lineCov">         13 :         if (validatorsBalanceMap[msg.sender] &gt; 0) {</span></a>
+<a name="311"><span class="lineNum">     311 </span>                :<span class="lineCov">         10 :             return msg.sender;</span></a>
 <a name="312"><span class="lineNum">     312 </span>                :            :         }</a>
 <a name="313"><span class="lineNum">     313 </span>        [<span class="branchCov" title="Branch 0 was taken 3 times"> + </span><span class="branchNoExec" title="Branch 1 was not executed"> # </span>]:<span class="lineCov">          3 :         if (payeeMap[msg.sender] != address(0)) {</span></a>
 <a name="314"><span class="lineNum">     314 </span>                :<span class="lineCov">          3 :             return payeeMap[msg.sender];</span></a>
