--- a/report/index-sort-l.html
+++ b/report/index-sort-l.html
@@ -31,18 +31,18 @@
             <td class="headerValue">lcov.info</td>
             <td></td>
             <td class="headerItem">Lines:</td>
-            <td class="headerCovTableEntry">285</td>
+            <td class="headerCovTableEntry">286</td>
             <td class="headerCovTableEntry">434</td>
-            <td class="headerCovTableEntryLo">65.7 %</td>
+            <td class="headerCovTableEntryLo">65.9 %</td>
           </tr>
           <tr>
             <td class="headerItem">Date:</td>
-            <td class="headerValue">2023-05-18 13:13:03</td>
+            <td class="headerValue">2023-05-18 13:25:21</td>
             <td></td>
             <td class="headerItem">Functions:</td>
-            <td class="headerCovTableEntry">71</td>
+            <td class="headerCovTableEntry">72</td>
             <td class="headerCovTableEntry">99</td>
-            <td class="headerCovTableEntryLo">71.7 %</td>
+            <td class="headerCovTableEntryLo">72.7 %</td>
           </tr>
           <tr>
             <td></td>
@@ -168,12 +168,12 @@
     <tr>
       <td class="coverFile"><a href="contracts/auction-handler/index.html">contracts/auction-handler</a></td>
       <td class="coverBar" align="center">
-        <table border=0 cellspacing=0 cellpadding=1><tr><td class="coverBarOutline"><img src="emerald.png" width=95 height=10 alt="94.7%"><img src="snow.png" width=5 height=10 alt="94.7%"></td></tr></table>
+        <table border=0 cellspacing=0 cellpadding=1><tr><td class="coverBarOutline"><img src="emerald.png" width=96 height=10 alt="96.1%"><img src="snow.png" width=4 height=10 alt="96.1%"></td></tr></table>
       </td>
+      <td class="coverPerHi">96.1&nbsp;%</td>
+      <td class="coverNumHi">73 / 76</td>
       <td class="coverPerHi">94.7&nbsp;%</td>
-      <td class="coverNumHi">72 / 76</td>
-      <td class="coverPerMed">89.5&nbsp;%</td>
-      <td class="coverNumMed">17 / 19</td>
+      <td class="coverNumHi">18 / 19</td>
       <td class="coverPerMed">75.0&nbsp;%</td>
       <td class="coverNumMed">30 / 40</td>
     </tr>
