Updated coverage for payValidatorCustom function

--- a/report/contracts/auction-handler/FastLaneAuctionHandler.sol.func-sort-c.html
+++ b/report/contracts/auction-handler/FastLaneAuctionHandler.sol.func-sort-c.html
@@ -31,27 +31,27 @@
             <td class="headerValue">lcov.info</td>
             <td></td>
             <td class="headerItem">Lines:</td>
-            <td class="headerCovTableEntry">74</td>
-            <td class="headerCovTableEntry">76</td>
-            <td class="headerCovTableEntryHi">97.4 %</td>
+            <td class="headerCovTableEntry">80</td>
+            <td class="headerCovTableEntry">82</td>
+            <td class="headerCovTableEntryHi">97.6 %</td>
           </tr>
           <tr>
             <td class="headerItem">Date:</td>
-            <td class="headerValue">2023-05-23 21:44:48</td>
+            <td class="headerValue">2023-07-05 22:10:23</td>
             <td></td>
             <td class="headerItem">Functions:</td>
-            <td class="headerCovTableEntry">18</td>
-            <td class="headerCovTableEntry">19</td>
-            <td class="headerCovTableEntryHi">94.7 %</td>
+            <td class="headerCovTableEntry">20</td>
+            <td class="headerCovTableEntry">21</td>
+            <td class="headerCovTableEntryHi">95.2 %</td>
           </tr>
           <tr>
             <td></td>
             <td></td>
             <td></td>
             <td class="headerItem">Branches:</td>
-            <td class="headerCovTableEntry">34</td>
-            <td class="headerCovTableEntry">40</td>
-            <td class="headerCovTableEntryMed">85.0 %</td>
+            <td class="headerCovTableEntry">36</td>
+            <td class="headerCovTableEntry">42</td>
+            <td class="headerCovTableEntryMed">85.7 %</td>
           </tr>
           <tr><td><img src="../../glass.png" width=3 height=3 alt=""></td></tr>
         </table>
@@ -69,80 +69,88 @@
       <td width="20%" class="tableHead">Hit count <span class="tableHeadSort"><img src="../../glass.png" width=10 height=14 alt="Sort by hit count" title="Sort by hit count" border=0></span></td>
     </tr>
     <tr>
-              <td class="coverFn"><a href="FastLaneAuctionHandler.sol.gcov.html#177">FastLaneAuctionHandler.</a></td>
+              <td class="coverFn"><a href="FastLaneAuctionHandler.sol.gcov.html#207">FastLaneAuctionHandler.</a></td>
               <td class="coverFnLo">0</td>
             </tr>
     <tr>
-              <td class="coverFn"><a href="FastLaneAuctionHandler.sol.gcov.html#318">FastLaneAuctionHandler.humanizeError</a></td>
+              <td class="coverFn"><a href="FastLaneAuctionHandler.sol.gcov.html#333">FastLaneAuctionHandler.getValidatorBlockOfLastWithdraw</a></td>
               <td class="coverFnHi">2</td>
             </tr>
     <tr>
-              <td class="coverFn"><a href="FastLaneAuctionHandler.sol.gcov.html#281">FastLaneAuctionHandler.isValidPayee</a></td>
+              <td class="coverFn"><a href="FastLaneAuctionHandler.sol.gcov.html#355">FastLaneAuctionHandler.humanizeError</a></td>
               <td class="coverFnHi">2</td>
             </tr>
     <tr>
-              <td class="coverFn"><a href="FastLaneAuctionHandler.sol.gcov.html#128">FastLaneAuctionHandler.simulateFlashBid</a></td>
+              <td class="coverFn"><a href="FastLaneAuctionHandler.sol.gcov.html#313">FastLaneAuctionHandler.isValidPayee</a></td>
               <td class="coverFnHi">2</td>
             </tr>
     <tr>
-              <td class="coverFn"><a href="FastLaneAuctionHandler.sol.gcov.html#303">FastLaneAuctionHandler.getValidatorRecipient</a></td>
+              <td class="coverFn"><a href="FastLaneAuctionHandler.sol.gcov.html#124">FastLaneAuctionHandler.payValidatorCustom</a></td>
+              <td class="coverFnHi">2</td>
+            </tr>
+    <tr>
+              <td class="coverFn"><a href="FastLaneAuctionHandler.sol.gcov.html#158">FastLaneAuctionHandler.simulateFlashBid</a></td>
+              <td class="coverFnHi">2</td>
+            </tr>
+    <tr>
+              <td class="coverFn"><a href="FastLaneAuctionHandler.sol.gcov.html#340">FastLaneAuctionHandler.getValidatorRecipient</a></td>
               <td class="coverFnHi">3</td>
             </tr>
     <tr>
-              <td class="coverFn"><a href="FastLaneAuctionHandler.sol.gcov.html#277">FastLaneAuctionHandler.isPayeeTimeLocked</a></td>
+              <td class="coverFn"><a href="FastLaneAuctionHandler.sol.gcov.html#309">FastLaneAuctionHandler.isPayeeTimeLocked</a></td>
               <td class="coverFnHi">3</td>
             </tr>
     <tr>
-              <td class="coverFn"><a href="FastLaneAuctionHandler.sol.gcov.html#186">FastLaneAuctionHandler.syncStuckNativeToken</a></td>
+              <td class="coverFn"><a href="FastLaneAuctionHandler.sol.gcov.html#216">FastLaneAuctionHandler.syncStuckNativeToken</a></td>
               <td class="coverFnHi">3</td>
             </tr>
     <tr>
-              <td class="coverFn"><a href="FastLaneAuctionHandler.sol.gcov.html#209">FastLaneAuctionHandler.withdrawStuckERC20</a></td>
+              <td class="coverFn"><a href="FastLaneAuctionHandler.sol.gcov.html#239">FastLaneAuctionHandler.withdrawStuckERC20</a></td>
               <td class="coverFnHi">3</td>
             </tr>
     <tr>
-              <td class="coverFn"><a href="FastLaneAuctionHandler.sol.gcov.html#324">FastLaneAuctionHandler.slice</a></td>
+              <td class="coverFn"><a href="FastLaneAuctionHandler.sol.gcov.html#361">FastLaneAuctionHandler.slice</a></td>
               <td class="coverFnHi">4</td>
             </tr>
     <tr>
-              <td class="coverFn"><a href="FastLaneAuctionHandler.sol.gcov.html#162">FastLaneAuctionHandler._handleBalances</a></td>
+              <td class="coverFn"><a href="FastLaneAuctionHandler.sol.gcov.html#323">FastLaneAuctionHandler.getValidatorBalance</a></td>
               <td class="coverFnHi">5</td>
             </tr>
     <tr>
-              <td class="coverFn"><a href="FastLaneAuctionHandler.sol.gcov.html#291">FastLaneAuctionHandler.getValidatorBalance</a></td>
-              <td class="coverFnHi">5</td>
-            </tr>
-    <tr>
-              <td class="coverFn"><a href="FastLaneAuctionHandler.sol.gcov.html#285">FastLaneAuctionHandler.validatorPayee</a></td>
+              <td class="coverFn"><a href="FastLaneAuctionHandler.sol.gcov.html#192">FastLaneAuctionHandler._handleBalances</a></td>
               <td class="coverFnHi">6</td>
             </tr>
     <tr>
-              <td class="coverFn"><a href="FastLaneAuctionHandler.sol.gcov.html#230">FastLaneAuctionHandler.collectFees</a></td>
+              <td class="coverFn"><a href="FastLaneAuctionHandler.sol.gcov.html#317">FastLaneAuctionHandler.validatorPayee</a></td>
               <td class="coverFnHi">7</td>
             </tr>
     <tr>
-              <td class="coverFn"><a href="FastLaneAuctionHandler.sol.gcov.html#296">FastLaneAuctionHandler.getValidatorPayee</a></td>
+              <td class="coverFn"><a href="FastLaneAuctionHandler.sol.gcov.html#260">FastLaneAuctionHandler.collectFees</a></td>
               <td class="coverFnHi">8</td>
             </tr>
     <tr>
-              <td class="coverFn"><a href="FastLaneAuctionHandler.sol.gcov.html#111">FastLaneAuctionHandler._payValidatorFee</a></td>
-              <td class="coverFnHi">12</td>
+              <td class="coverFn"><a href="FastLaneAuctionHandler.sol.gcov.html#328">FastLaneAuctionHandler.getValidatorPayee</a></td>
+              <td class="coverFnHi">8</td>
             </tr>
     <tr>
-              <td class="coverFn"><a href="FastLaneAuctionHandler.sol.gcov.html#107">FastLaneAuctionHandler.payValidatorFee</a></td>
-              <td class="coverFnHi">12</td>
+              <td class="coverFn"><a href="FastLaneAuctionHandler.sol.gcov.html#116">FastLaneAuctionHandler._payValidatorFee</a></td>
+              <td class="coverFnHi">13</td>
             </tr>
     <tr>
-              <td class="coverFn"><a href="FastLaneAuctionHandler.sol.gcov.html#249">FastLaneAuctionHandler.updateValidatorPayee</a></td>
+              <td class="coverFn"><a href="FastLaneAuctionHandler.sol.gcov.html#112">FastLaneAuctionHandler.payValidatorFee</a></td>
+              <td class="coverFnHi">13</td>
+            </tr>
+    <tr>
+              <td class="coverFn"><a href="FastLaneAuctionHandler.sol.gcov.html#281">FastLaneAuctionHandler.updateValidatorPayee</a></td>
               <td class="coverFnHi">14</td>
             </tr>
     <tr>
-              <td class="coverFn"><a href="FastLaneAuctionHandler.sol.gcov.html#307">FastLaneAuctionHandler.getValidator</a></td>
-              <td class="coverFnHi">15</td>
+              <td class="coverFn"><a href="FastLaneAuctionHandler.sol.gcov.html#83">FastLaneAuctionHandler.submitFlashBid</a></td>
+              <td class="coverFnHi">16</td>
             </tr>
     <tr>
-              <td class="coverFn"><a href="FastLaneAuctionHandler.sol.gcov.html#78">FastLaneAuctionHandler.submitFlashBid</a></td>
-              <td class="coverFnHi">15</td>
+              <td class="coverFn"><a href="FastLaneAuctionHandler.sol.gcov.html#344">FastLaneAuctionHandler.getValidator</a></td>
+              <td class="coverFnHi">17</td>
             </tr>
   </table>
   <br>
