--- a/report/index.html
+++ b/report/index.html
@@ -31,27 +31,27 @@
             <td class="headerValue">lcov.info</td>
             <td></td>
             <td class="headerItem">Lines:</td>
-            <td class="headerCovTableEntry">296</td>
-            <td class="headerCovTableEntry">456</td>
-            <td class="headerCovTableEntryLo">64.9 %</td>
+            <td class="headerCovTableEntry">307</td>
+            <td class="headerCovTableEntry">467</td>
+            <td class="headerCovTableEntryLo">65.7 %</td>
           </tr>
           <tr>
             <td class="headerItem">Date:</td>
-            <td class="headerValue">2023-05-23 21:44:48</td>
+            <td class="headerValue">2023-07-05 22:10:23</td>
             <td></td>
             <td class="headerItem">Functions:</td>
-            <td class="headerCovTableEntry">74</td>
-            <td class="headerCovTableEntry">102</td>
-            <td class="headerCovTableEntryLo">72.5 %</td>
+            <td class="headerCovTableEntry">77</td>
+            <td class="headerCovTableEntry">105</td>
+            <td class="headerCovTableEntryLo">73.3 %</td>
           </tr>
           <tr>
             <td></td>
             <td></td>
             <td></td>
             <td class="headerItem">Branches:</td>
-            <td class="headerCovTableEntry">116</td>
-            <td class="headerCovTableEntry">188</td>
-            <td class="headerCovTableEntryLo">61.7 %</td>
+            <td class="headerCovTableEntry">118</td>
+            <td class="headerCovTableEntry">190</td>
+            <td class="headerCovTableEntryLo">62.1 %</td>
           </tr>
           <tr><td><img src="glass.png" width=3 height=3 alt=""></td></tr>
         </table>
@@ -96,14 +96,14 @@
     <tr>
       <td class="coverFile"><a href="contracts/auction-handler/index.html">contracts/auction-handler</a></td>
       <td class="coverBar" align="center">
-        <table border=0 cellspacing=0 cellpadding=1><tr><td class="coverBarOutline"><img src="emerald.png" width=97 height=10 alt="97.4%"><img src="snow.png" width=3 height=10 alt="97.4%"></td></tr></table>
+        <table border=0 cellspacing=0 cellpadding=1><tr><td class="coverBarOutline"><img src="emerald.png" width=98 height=10 alt="97.6%"><img src="snow.png" width=2 height=10 alt="97.6%"></td></tr></table>
       </td>
-      <td class="coverPerHi">97.4&nbsp;%</td>
-      <td class="coverNumHi">74 / 76</td>
-      <td class="coverPerHi">94.7&nbsp;%</td>
-      <td class="coverNumHi">18 / 19</td>
-      <td class="coverPerMed">85.0&nbsp;%</td>
-      <td class="coverNumMed">34 / 40</td>
+      <td class="coverPerHi">97.6&nbsp;%</td>
+      <td class="coverNumHi">80 / 82</td>
+      <td class="coverPerHi">95.2&nbsp;%</td>
+      <td class="coverNumHi">20 / 21</td>
+      <td class="coverPerMed">85.7&nbsp;%</td>
+      <td class="coverNumMed">36 / 42</td>
     </tr>
     <tr>
       <td class="coverFile"><a href="contracts/helpers/index.html">contracts/helpers</a></td>
@@ -200,6 +200,18 @@
       <td class="coverNumLo">0 / 3</td>
       <td class="coverPerLo">0.0&nbsp;%</td>
       <td class="coverNumLo">0 / 2</td>
+    </tr>
+    <tr>
+      <td class="coverFile"><a href="test/mocks/index.html">test/mocks</a></td>
+      <td class="coverBar" align="center">
+        <table border=0 cellspacing=0 cellpadding=1><tr><td class="coverBarOutline"><img src="emerald.png" width=100 height=10 alt="100.0%"></td></tr></table>
+      </td>
+      <td class="coverPerHi">100.0&nbsp;%</td>
+      <td class="coverNumHi">5 / 5</td>
+      <td class="coverPerHi">100.0&nbsp;%</td>
+      <td class="coverNumHi">1 / 1</td>
+      <td class="coverPerHi">-</td>
+      <td class="coverNumHi">0 / 0</td>
     </tr>
   </table>
   </center>
