--- a/report/contracts/auction-handler/index-sort-f.html
+++ b/report/contracts/auction-handler/index-sort-f.html
@@ -31,27 +31,27 @@
             <td class="headerValue">lcov.info</td>
             <td></td>
             <td class="headerItem">Lines:</td>
-            <td class="headerCovTableEntry">74</td>
-            <td class="headerCovTableEntry">76</td>
-            <td class="headerCovTableEntryHi">97.4 %</td>
+            <td class="headerCovTableEntry">93</td>
+            <td class="headerCovTableEntry">125</td>
+            <td class="headerCovTableEntryLo">74.4 %</td>
           </tr>
           <tr>
             <td class="headerItem">Date:</td>
-            <td class="headerValue">2023-05-23 21:44:48</td>
+            <td class="headerValue">2023-08-29 04:40:03</td>
             <td></td>
             <td class="headerItem">Functions:</td>
-            <td class="headerCovTableEntry">18</td>
-            <td class="headerCovTableEntry">19</td>
-            <td class="headerCovTableEntryHi">94.7 %</td>
+            <td class="headerCovTableEntry">20</td>
+            <td class="headerCovTableEntry">25</td>
+            <td class="headerCovTableEntryMed">80.0 %</td>
           </tr>
           <tr>
             <td></td>
             <td></td>
             <td></td>
             <td class="headerItem">Branches:</td>
-            <td class="headerCovTableEntry">34</td>
-            <td class="headerCovTableEntry">40</td>
-            <td class="headerCovTableEntryMed">85.0 %</td>
+            <td class="headerCovTableEntry">43</td>
+            <td class="headerCovTableEntry">68</td>
+            <td class="headerCovTableEntryLo">63.2 %</td>
           </tr>
           <tr><td><img src="../../glass.png" width=3 height=3 alt=""></td></tr>
         </table>
@@ -84,14 +84,14 @@
     <tr>
       <td class="coverFile"><a href="FastLaneAuctionHandler.sol.gcov.html">FastLaneAuctionHandler.sol</a></td>
       <td class="coverBar" align="center">
-        <table border=0 cellspacing=0 cellpadding=1><tr><td class="coverBarOutline"><img src="../../emerald.png" width=97 height=10 alt="97.4%"><img src="../../snow.png" width=3 height=10 alt="97.4%"></td></tr></table>
+        <table border=0 cellspacing=0 cellpadding=1><tr><td class="coverBarOutline"><img src="../../ruby.png" width=74 height=10 alt="74.4%"><img src="../../snow.png" width=26 height=10 alt="74.4%"></td></tr></table>
       </td>
-      <td class="coverPerHi">97.4&nbsp;%</td>
-      <td class="coverNumHi">74 / 76</td>
-      <td class="coverPerHi">94.7&nbsp;%</td>
-      <td class="coverNumHi">18 / 19</td>
-      <td class="coverPerMed">85.0&nbsp;%</td>
-      <td class="coverNumMed">34 / 40</td>
+      <td class="coverPerLo">74.4&nbsp;%</td>
+      <td class="coverNumLo">93 / 125</td>
+      <td class="coverPerMed">80.0&nbsp;%</td>
+      <td class="coverNumMed">20 / 25</td>
+      <td class="coverPerLo">63.2&nbsp;%</td>
+      <td class="coverNumLo">43 / 68</td>
     </tr>
   </table>
   </center>
