--- a/report/index-sort-b.html
+++ b/report/index-sort-b.html
@@ -31,27 +31,27 @@
             <td class="headerValue">lcov.info</td>
             <td></td>
             <td class="headerItem">Lines:</td>
-            <td class="headerCovTableEntry">296</td>
-            <td class="headerCovTableEntry">456</td>
-            <td class="headerCovTableEntryLo">64.9 %</td>
+            <td class="headerCovTableEntry">315</td>
+            <td class="headerCovTableEntry">505</td>
+            <td class="headerCovTableEntryLo">62.4 %</td>
           </tr>
           <tr>
             <td class="headerItem">Date:</td>
-            <td class="headerValue">2023-05-23 21:44:48</td>
+            <td class="headerValue">2023-08-29 04:40:03</td>
             <td></td>
             <td class="headerItem">Functions:</td>
-            <td class="headerCovTableEntry">74</td>
-            <td class="headerCovTableEntry">102</td>
-            <td class="headerCovTableEntryLo">72.5 %</td>
+            <td class="headerCovTableEntry">76</td>
+            <td class="headerCovTableEntry">108</td>
+            <td class="headerCovTableEntryLo">70.4 %</td>
           </tr>
           <tr>
             <td></td>
             <td></td>
             <td></td>
             <td class="headerItem">Branches:</td>
-            <td class="headerCovTableEntry">116</td>
-            <td class="headerCovTableEntry">188</td>
-            <td class="headerCovTableEntryLo">61.7 %</td>
+            <td class="headerCovTableEntry">125</td>
+            <td class="headerCovTableEntry">216</td>
+            <td class="headerCovTableEntryLo">57.9 %</td>
           </tr>
           <tr><td><img src="glass.png" width=3 height=3 alt=""></td></tr>
         </table>
@@ -82,18 +82,6 @@
       <td class="tableHead" colspan=2>Branches <span class="tableHeadSort"><img src="glass.png" width=10 height=14 alt="Sort by branch coverage" title="Sort by branch coverage" border=0></span></td>
     </tr>
     <tr>
-      <td class="coverFile"><a href="contracts/helpers/index.html">contracts/helpers</a></td>
-      <td class="coverBar" align="center">
-                <table border=0 cellspacing=0 cellpadding=1><tr><td class="coverBarOutline"><img src="snow.png" width=100 height=10 alt="0.0%"></td></tr></table>
-      </td>
-      <td class="coverPerLo">0.0&nbsp;%</td>
-      <td class="coverNumLo">0 / 5</td>
-      <td class="coverPerLo">0.0&nbsp;%</td>
-      <td class="coverNumLo">0 / 1</td>
-      <td class="coverPerLo">0.0&nbsp;%</td>
-      <td class="coverNumLo">0 / 2</td>
-    </tr>
-    <tr>
       <td class="coverFile"><a href="test/legacy-test/index.html">test/legacy-test</a></td>
       <td class="coverBar" align="center">
                 <table border=0 cellspacing=0 cellpadding=1><tr><td class="coverBarOutline"><img src="snow.png" width=100 height=10 alt="0.0%"></td></tr></table>
@@ -102,6 +90,18 @@
       <td class="coverNumLo">0 / 27</td>
       <td class="coverPerLo">0.0&nbsp;%</td>
       <td class="coverNumLo">0 / 3</td>
+      <td class="coverPerLo">0.0&nbsp;%</td>
+      <td class="coverNumLo">0 / 2</td>
+    </tr>
+    <tr>
+      <td class="coverFile"><a href="contracts/helpers/index.html">contracts/helpers</a></td>
+      <td class="coverBar" align="center">
+                <table border=0 cellspacing=0 cellpadding=1><tr><td class="coverBarOutline"><img src="snow.png" width=100 height=10 alt="0.0%"></td></tr></table>
+      </td>
+      <td class="coverPerLo">0.0&nbsp;%</td>
+      <td class="coverNumLo">0 / 5</td>
+      <td class="coverPerLo">0.0&nbsp;%</td>
+      <td class="coverNumLo">0 / 1</td>
       <td class="coverPerLo">0.0&nbsp;%</td>
       <td class="coverNumLo">0 / 2</td>
     </tr>
@@ -180,14 +180,14 @@
     <tr>
       <td class="coverFile"><a href="contracts/auction-handler/index.html">contracts/auction-handler</a></td>
       <td class="coverBar" align="center">
-        <table border=0 cellspacing=0 cellpadding=1><tr><td class="coverBarOutline"><img src="emerald.png" width=97 height=10 alt="97.4%"><img src="snow.png" width=3 height=10 alt="97.4%"></td></tr></table>
+        <table border=0 cellspacing=0 cellpadding=1><tr><td class="coverBarOutline"><img src="ruby.png" width=74 height=10 alt="74.4%"><img src="snow.png" width=26 height=10 alt="74.4%"></td></tr></table>
       </td>
-      <td class="coverPerHi">97.4&nbsp;%</td>
-      <td class="coverNumHi">74 / 76</td>
-      <td class="coverPerHi">94.7&nbsp;%</td>
-      <td class="coverNumHi">18 / 19</td>
-      <td class="coverPerMed">85.0&nbsp;%</td>
-      <td class="coverNumMed">34 / 40</td>
+      <td class="coverPerLo">74.4&nbsp;%</td>
+      <td class="coverNumLo">93 / 125</td>
+      <td class="coverPerMed">80.0&nbsp;%</td>
+      <td class="coverNumMed">20 / 25</td>
+      <td class="coverPerLo">63.2&nbsp;%</td>
+      <td class="coverNumLo">43 / 68</td>
     </tr>
     <tr>
       <td class="coverFile"><a href="contracts/legacy/index.html">contracts/legacy</a></td>
