--- a/report/index-sort-l.html
+++ b/report/index-sort-l.html
@@ -31,27 +31,27 @@
             <td class="headerValue">lcov.info</td>
             <td></td>
             <td class="headerItem">Lines:</td>
-            <td class="headerCovTableEntry">296</td>
-            <td class="headerCovTableEntry">456</td>
-            <td class="headerCovTableEntryLo">64.9 %</td>
+            <td class="headerCovTableEntry">315</td>
+            <td class="headerCovTableEntry">505</td>
+            <td class="headerCovTableEntryLo">62.4 %</td>
           </tr>
           <tr>
             <td class="headerItem">Date:</td>
-            <td class="headerValue">2023-05-23 21:44:48</td>
+            <td class="headerValue">2023-08-29 04:40:03</td>
             <td></td>
             <td class="headerItem">Functions:</td>
-            <td class="headerCovTableEntry">74</td>
-            <td class="headerCovTableEntry">102</td>
-            <td class="headerCovTableEntryLo">72.5 %</td>
+            <td class="headerCovTableEntry">76</td>
+            <td class="headerCovTableEntry">108</td>
+            <td class="headerCovTableEntryLo">70.4 %</td>
           </tr>
           <tr>
             <td></td>
             <td></td>
             <td></td>
             <td class="headerItem">Branches:</td>
-            <td class="headerCovTableEntry">116</td>
-            <td class="headerCovTableEntry">188</td>
-            <td class="headerCovTableEntryLo">61.7 %</td>
+            <td class="headerCovTableEntry">125</td>
+            <td class="headerCovTableEntry">216</td>
+            <td class="headerCovTableEntryLo">57.9 %</td>
           </tr>
           <tr><td><img src="glass.png" width=3 height=3 alt=""></td></tr>
         </table>
@@ -154,6 +154,18 @@
       <td class="coverNumLo">0 / 12</td>
     </tr>
     <tr>
+      <td class="coverFile"><a href="contracts/auction-handler/index.html">contracts/auction-handler</a></td>
+      <td class="coverBar" align="center">
+        <table border=0 cellspacing=0 cellpadding=1><tr><td class="coverBarOutline"><img src="ruby.png" width=74 height=10 alt="74.4%"><img src="snow.png" width=26 height=10 alt="74.4%"></td></tr></table>
+      </td>
+      <td class="coverPerLo">74.4&nbsp;%</td>
+      <td class="coverNumLo">93 / 125</td>
+      <td class="coverPerMed">80.0&nbsp;%</td>
+      <td class="coverNumMed">20 / 25</td>
+      <td class="coverPerLo">63.2&nbsp;%</td>
+      <td class="coverNumLo">43 / 68</td>
+    </tr>
+    <tr>
       <td class="coverFile"><a href="test/index.html">test</a></td>
       <td class="coverBar" align="center">
         <table border=0 cellspacing=0 cellpadding=1><tr><td class="coverBarOutline"><img src="amber.png" width=84 height=10 alt="84.0%"><img src="snow.png" width=16 height=10 alt="84.0%"></td></tr></table>
@@ -176,18 +188,6 @@
       <td class="coverNumLo">7 / 10</td>
       <td class="coverPerLo">37.5&nbsp;%</td>
       <td class="coverNumLo">9 / 24</td>
-    </tr>
-    <tr>
-      <td class="coverFile"><a href="contracts/auction-handler/index.html">contracts/auction-handler</a></td>
-      <td class="coverBar" align="center">
-        <table border=0 cellspacing=0 cellpadding=1><tr><td class="coverBarOutline"><img src="emerald.png" width=97 height=10 alt="97.4%"><img src="snow.png" width=3 height=10 alt="97.4%"></td></tr></table>
-      </td>
-      <td class="coverPerHi">97.4&nbsp;%</td>
-      <td class="coverNumHi">74 / 76</td>
-      <td class="coverPerHi">94.7&nbsp;%</td>
-      <td class="coverNumHi">18 / 19</td>
-      <td class="coverPerMed">85.0&nbsp;%</td>
-      <td class="coverNumMed">34 / 40</td>
     </tr>
     <tr>
       <td class="coverFile"><a href="contracts/legacy/index.html">contracts/legacy</a></td>
